add sample video capture

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,2 +1,5 @@
-@import '~element-ui/lib/theme-default/button.css';
-@import '~element-ui/lib/theme-default/dialog.css';
+@import '~videojs-record/dist/css/videojs.record.min.css';
+
+body {
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+}
